# mcp-sdk-v2

./: .gitignore  .gitleaks.toml  .prettierignore  AGENTS.md  Directory.Build.props  HANDOFF.md  README.md  Stackific.Mcp.slnx  Taskfile.yml  lefthook.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  ruff.toml  tsconfig.base.json
py-mcp-client/: auth_flow.py  config.py  debug_bus.py  elicitation.py  main.py  mcp_client.py  pyproject.toml  sampling.py  transport.py
py-mcp-client/tests/: test_app.py
py-mcp-server/: auth_app.py  counter_app.py  features.py  main.py  pyproject.toml
py-mcp-server/tests/: test_app.py
py-sdk/: pyproject.toml
py-sdk/src/mcp/: __init__.py  _model.py
py-sdk/src/mcp/client/: __init__.py  client.py  http.py  oauth.py  retry.py  transport.py
py-sdk/src/mcp/json/: __init__.py  meta_key.py  value.py
py-sdk/src/mcp/jsonrpc/: __init__.py  dispatch.py  framing.py  payload.py
py-sdk/src/mcp/lifecycle/: __init__.py  policy.py  registry.py  state.py
py-sdk/src/mcp/protocol/: __init__.py  authorization.py  authorization_flow.py  authorization_registration.py  caching.py  capabilities.py  capability_negotiation.py  completion.py  conformance.py  conformance_requirements.py  discovery.py  elicitation.py  elicitation_form.py  errors.py  extension_mechanism.py  extensions.py  implementation.py  logging.py  messages.py  meta.py  multi_round_trip.py  negotiation.py  pagination.py  progress.py  prompts.py  registries.py  resources.py  resources_read.py  revision.py  roles.py  roots.py  sampling.py  security.py  stateless.py  streaming.py  tasks.py  tasks_lifecycle.py  tools.py  tools_call.py  ui.py  (+1 more)
py-sdk/tests/client/: test_client.py  test_client_runtime.py  test_http.py  test_oauth.py  test_retry.py
py-sdk/tests/json/: test_meta_key.py  test_value.py
py-sdk/tests/jsonrpc/: test_dispatch.py  test_framing.py  test_payload.py
py-sdk/tests/lifecycle/: test_lifecycle.py
py-sdk/tests/protocol/: test_authorization.py  test_caching.py  test_capabilities.py  test_capability_negotiation.py  test_completion.py  test_conformance.py  test_discovery.py  test_elicitation.py  test_elicitation_form.py  test_errors.py  test_extension_mechanism.py  test_extensions.py  test_logging.py  test_messages.py  test_meta.py  test_multi_round_trip.py  test_negotiation.py  test_pagination.py  test_progress.py  test_prompts.py  test_registries.py  test_resources.py  test_resources_read.py  test_revision.py  test_roles_implementation.py  test_roots.py  test_sampling.py  test_security.py  test_stateless.py  test_streaming.py  test_tasks.py  test_tasks_lifecycle.py  test_tools.py  test_tools_call.py  test_ui.py  test_ui_host.py
py-sdk/tests/server/: test_asgi_handler.py  test_auth.py  test_caching.py  test_http.py  test_runtime.py  test_server.py  test_server_dispatch.py  test_server_stdio.py  test_task_store.py  test_ui.py
py-sdk/tests/testing/: test_in_memory.py
py-sdk/tests/transport/: test_context.py  test_contract.py  test_correlation.py  test_framing.py  test_http_headers.py  test_http_helpers.py  test_http_param_encoding.py  test_http_param_headers.py  test_http_responses.py  test_in_memory.py  test_stdio.py
py-sdk/tests/types/: test_base_metadata.py  test_content.py  test_icon.py  test_implementation.py  test_resource_contents.py  test_role_annotations.py
(+2434 files in other folders)
