[project]
name = "py-mcp-client"
version = "0.1.0"
description = "Placeholder Python MCP client host (FastAPI). Serves the companion frontend's REST + wire-debug surface; no real MCP implementation."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
]

[tool.uv]
# Application, not a library — uv only manages the venv + deps.
package = false
