[project]
name = "stackific-mcp"
version = "0.1.0"
description = "Python MCP SDK — specification-compliant implementation (parity with @stackific/mcp-sdk-ts). Normative source: model-context-protocol-specification.md (MCP V2 RC, revision 2026-07-28)."
requires-python = ">=3.12"
# jsonschema provides the Draft 2020-12 value validator for tool inputSchema/outputSchema
# (the Python analogue of the TS SDK's Ajv 2020 dependency).
dependencies = [
  "httpx>=0.28.1",
  "jsonschema>=4.20",
  "pydantic>=2.7",
  "starlette>=1.3.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp"]

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
# importlib mode lets test modules share a basename across directories
# (e.g. tests/jsonrpc/test_framing.py and tests/transport/test_framing.py).
addopts = "-q --import-mode=importlib"
testpaths = ["tests"]
pythonpath = ["src"]
